--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
       matrix:
         python-version: [3.9]  # Defina a versão compatível
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:13
@@ -17,6 +18,12 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         ports:
           - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U testuser"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
